# nibbler

./: .gitignore  123.txt  CMakeLists.txt  README.md  SDL.dylib  SFML.dylib  build.sh  install.sh
DLLoader/Unix/: DLLoader.h
GTK/: CMakeLists.txt  GTKLib.cpp  GTKLib.h  Makefile  gtk2-config.cmake
GTK/includes/: GTKLib.hpp
GTK/sources/: GTKLib.cpp
GuiInterface/: CMakeLists.txt  IGui.h
OpenGL/: CMakeLists.txt  OpenGLib.cpp  OpenGLib.h
SDL/: CMakeLists.txt  Makefile  SDLib.cpp  SDLib.h  sdl2-config.cmake
SDL/includes/: SDLib.hpp
SDL/sources/: SDLib.cpp
SFML/: CMakeLists.txt  Makefile  SFMLib.cpp  SFMLib.h
SFML/includes/: SFMLLib.hpp
SFML/sources/: SFMLib.cpp
SnakeModels/: Block.h  CMakeLists.txt  FoodBlock.cpp  FoodBlock.h  GameModel.cpp  GameModel.h  Map.cpp  Map.h  Snake.cpp  SnakeBlock.cpp  SnakeBlock.h
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  Exception.h  Game.cpp  Game.h  GuiManager.cpp  GuiManager.h  IGui.h  main.cpp
app/src/model/: Block.cpp  Block.h  FoodBlock.h  GameModel.cpp  GameModel.h  Map.cpp  Map.h  Ptrs.h  Snake.cpp  Snake.h  SnakeBlock.h
cmake/: SFMLConfig.cmake
